@startuml
title ChessFlow — Diagramme de classes métier (version livrée)

top to bottom direction
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam defaultFontName Arial
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #34536D
  FontColor #172B3A
  HeaderBackgroundColor #DCEAF5
}

class Player {
  - last_name: str
  - first_name: str
  - birth_date: str
  - national_id: str
  + to_dict()
  + from_dict(data)
}

class Tournament {
  - name: str
  - location: str
  - start_date: str
  - end_date: str
  - description: str
  - number_of_rounds: int
  - current_round: int
  - players: list[Player]
  - rounds: list[Round]
  + add_player(player)
  + add_round(round)
  + to_dict()
  + from_dict(data)
}

class Round {
  - name: str
  - matches: list[Match]
  - start_datetime: datetime | None
  - end_datetime: datetime | None
  + add_match(match)
  + close()
  + to_dict()
  + from_dict(data)
}

class Match {
  - pair: tuple[list, list]
  + player_one: Player
  + player_two: Player
  + score_one: float | None
  + score_two: float | None
  + set_result(score_one, score_two)
  + to_dict()
  + from_dict(data)
}

Tournament "0..*" o-- "0..*" Player : players
Tournament "1" *-- "0..*" Round : rounds
Round "1" *-- "0..*" Match : matches
Match "0..*" --> "2" Player : pair

note right of Player
  Identité globale du joueur.
  Validation et unicité de national_id :
  PlayerController.
end note

note right of Tournament
  Aucun score cumulé ni statut séparé.
  current_round = nombre de rondes créées.
  Validation des données : TournamentController.
end note

note right of Round
  Progression, appariements, scores et classement :
  RoundController.
end note

note bottom of Match
  Représentation interne :
  pair = (
    [player_one, score_one],
    [player_two, score_two]
  )

  Validation des résultats : MatchController.
end note

legend bottom left
  o--  agrégation : les joueurs existent indépendamment
  *--  composition métier : ronde et match appartiennent au tournoi
  -->  association : le match référence deux joueurs
  Aucune classe abstraite ni relation d'héritage
endlegend
@enduml
